# constellation-assignment

./: .gitignore  CLAUDE.md  README.md  index.html  package.json
assignment/: package-lock.json
assignment/backend/: .env.example  launch_satellites.py  pyproject.toml  run.py
assignment/backend/bridge/: app.py  connection_manager.py  constellation_client.py  log_listener.py  protocol.py  settings.py  ws.py
assignment/src/: App.jsx  App.module.css  index.css
assignment/src/components/control/: ControlPanel.jsx  ControlPanel.module.css  SatelliteDetail.jsx  SatelliteDetail.module.css  SatelliteTable.jsx  SatelliteTable.module.css
assignment/src/components/layout/: Header.jsx  Header.module.css  Sidebar.jsx
assignment/src/components/logs/: LogPanel.jsx  LogPanel.module.css
assignment/src/components/telemetry/: TelemetryPanel.jsx  TelemetryPanel.module.css
assignment/src/services/: websocket.js
assignment/src/simulation/: logGenerator.js  satelliteFSM.js  telemetryGenerator.js  useSimulation.js
assignment/src/store/: connectionSlice.js  index.js  logSlice.js  runSlice.js  satelliteSlice.js  telemetrySlice.js  websocketMiddleware.js
public/: config.toml
src/: App.jsx  main.jsx
src/components/control/: ConfigEditor.jsx  ConfigEditor.module.css  ControlPanel.jsx  SatelliteDetail.jsx  SatelliteTable.jsx  SatelliteTable.module.css
src/components/layout/: Header.jsx  Header.module.css  Sidebar.module.css
src/components/logs/: LogPanel.jsx  LogPanel.module.css
src/components/telemetry/: TelemetryPanel.jsx
src/simulation/: logGenerator.js  satelliteFSM.js  telemetryGenerator.js  useSimulation.js
src/store/: logSlice.js  satelliteSlice.js
