[project]
name = "constellation-bridge"
version = "0.1.0"
description = "WebSocket bridge between browsers and a Constellation DAQ network"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.0",
    "websockets>=12.0",
]

# ConstellationDAQ is installed in ~/repos/constellation/.venv (constellationdaq>=0.7).
# Run the bridge with that venv:
#   ~/repos/constellation/.venv/bin/python run.py --group demo

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:build"
